# data_service

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  DEVELOPER.md  environment.yml  pyproject.toml
app/: main.py
app/config/: __init__.py  base.yml
app/db_module/: connect.py
app/queries/: get_data.py  sql.py
app/routers/: __init__.py  admin.py  attributes.py
app/sql/: insert_data.sql  read_data.sql
entities/: attributes.py  enums.py  qbase.py
